[package]
name = "rustexify"
version = "0.1.0"
authors = ["Race Williams <race@racewilliams.com>"]
description = "LaTex representations of Rust functions via procedural macros"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
